<resources>
    <string name="app_name">Shopping List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_btn_overview">Shopping Lists</string>
    <string name="nav_list_title">Shopping List</string>
    <string name="recipe_name_hint">Recipe Name</string>
    <string name="trans_ipt_hint">Description</string>
    <string name="btn_recipe_add">Add Recipe</string>
    <string name="nav_btn_add">Add Recipe</string>
    <string name="btn_edit_add">Insert item</string>
    <string name="username_input_hint">Enter username</string>
    <string name="btn_start_app">Start</string>
    <string name="btn_add_to_list">Add all to list</string>
    <string name="notification_channel_name" translatable="false">Reminder</string>
    <string name="CHANNEL_ID" translatable="false">RecapChannel</string>
    <string name="nav_start_overview_title">Shopping Lists</string>
    <string name="notification_description">Notification</string>
    <string name="nav_create_list_title">Create new list</string>
    <string name="app_author_name">by Justus</string>
    <string name="ordering_name">Sort by:</string>
    <string name="item_name_input_hint">Item Name</string>
    <string name="list_finished_header">List Finished</string>
    <string name="btn_list_finished">Finished</string>
    <string name="ordering_default_key">Default</string>
    <string name="ordering_alphabet_key">Alphabetical</string>
    <string name="ordering_alphabet_rev_key">Reversed Alphabetical</string>
    <string name="ordering_checked_key">Checked Last</string>
    <string name="ordering_supermarket_key">Supermarket Order</string>
    <string name="list_title_input_hint">Title</string>
    <string name="btn_create_list">Create List</string>
    <string name="search_users_input_hint">Search users...</string>
    <string name="btn_share_list_user">Share</string>
    <string name="btn_unshare_list_user">Unshare</string>
    <string name="share_fragment_name">Share %1$s</string>
    <string name="share_btn_text">Share</string>
    <string name="delete_list_button_text">Delete List</string>
    <string name="clear_items_in_list_button_text">Clear Items In List</string>
    <string name="nav_share_overview_title">Share Overview</string>
    <string name="clear_check_item_dialog">Do you really want to clear all checked items?</string>
    <string name="clear_item_dialog_title">Confirm Clear All Checked Items!</string>
    <string name="clear_item_dialog_yes">Yes, clear</string>
    <string name="clear_item_dialog_no">Cancel</string>
    <string name="delete_list_dialog">Do you really want to delete this list?</string>
    <string name="delete_list_dialog_title">Delete List!</string>
    <string name="delete_list_dialog_yes">Yes, delete</string>
    <string name="delete_list_dialog_no">Cancel</string>
    <string name="config_fragment_title">Configuration</string>
    <string name="config_btn_create_online">Create user online</string>
    <string name="config_btn_delete_online">Delete online user</string>
    <string name="nav_btn_receipt">Recipes</string>
    <string name="receipt_overview_title">Recipes</string>
    <string name="receipt_title">Recipe</string>
    <string name="receipt_edit_title">Edit Recipe</string>
    <string name="fragment_list_picker_title">Choose a list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_title">Edit Title</string>
    <string name="ingredients_header">Ingredients:</string>
    <string name="steps_header">Steps:</string>
    <string name="recipe_edit_add_item_btn">Add new item</string>
    <string name="recipe_edit_add_desc_btn">Add new description</string>
    <string name="edit_recipe_finish_btn">Finish editing</string>
    <string name="recipe_add_items_finish_toast">Added %1$d item(s) to list \'%2$s\'</string>
    <string name="list_drop_down_rename_btn">Rename List</string>
    <string name="list_overview_drop_down_add_btn">Add</string>
    <string name="list_overview_drop_down_delete_btn">Delete User</string>
    <string name="list_overview_drop_down_config_btn">Config</string>
    <string name="list_overview_drop_down_clear_btn">Clear All Lists</string>
    <string name="recipe_drow_down_add_items_btn">Add items to list</string>
    <string name="recipe_item_name_hint">Insert item here</string>
    <string name="recipe_edit_description_hint">Insert description here</string>
    <string name="list_item_amount_name">Amount</string>
    <string name="recipe_portions_text">Portions</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="start_screen_background_description">An image of vegetables, eggs, bread and other ingredients used to cook healty and delicious meals</string>
    <string name="create_list_fragment_title">Update List Title</string>
    <string name="select_images_bot_dialog">Select Images</string>
    <string name="take_images_bot_dialog">Take Images (WIP)</string>
    <string name="recipe_confirm_delete">Do you really want to delete this recipe?</string>
    <string name="recipe_confirm_delete_title">Delete Recipe</string>
    <string name="recipe_unshareable_placeholder_title">This recipe cannot be shared</string>
    <string name="recipe_unshareable_placeholder_description">You can only share recipes which were created by yourself and which are stored online</string>
    <string name="recipe_unshareable_placeholder_try_text">Try creating a new recipe and press share on this one.</string>
    <string name="list_unshareable_placeholder_title">This list cannot be shared</string>
    <string name="list_unshareable_placeholder_description">You can only share lists which you created yourself and which are stored online</string>
    <string name="list_unshareable_placeholder_try_text">Try creating a new list and share this new one</string>
    <string name="empty_list_placeholder_title">Didn\'t find anything to buy yet?</string>
    <string name="empty_list_placeholder_desc_1">Why don\'t you try out daily things like \'Milk\', \'Sugar\' or \'Eggs\'?</string>
    <string name="empty_list_placeholder_desc_2">Enter the item down below and press the \'+\' button</string>
    <string name="list_overview_empty_placeholder_title">Pretty empty here</string>
    <string name="list_overview_empty_placeholder_desc_1">Try adding something new by pressing the \'+\' button</string>
    <string name="list_overview_empty_placeholder_desc_2">Or check if some lists are shared with you by swiping down</string>
    <string name="recipe_overview_placeholder_title">Pretty empty here</string>
    <string name="recipe_overview_placeholder_desc_1">Try adding something new by pressing the \'+\' button</string>
    <string name="recipe_overview_placeholder_desc_2">Or check if some recipes are shared with you by swiping down</string>
    <string name="camera_finish_btn">Finish</string>
    <string name="camera_select_btn">Select</string>
</resources>