<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_plus"
        android:title="@string/list_overview_drop_down_add_btn"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_minus"
        android:title="@string/list_overview_drop_down_delete_btn"
        app:showAsAction="withText" />
    <item
        android:id="@+id/config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_check"
        android:title="@string/list_overview_drop_down_config_btn"
        app:showAsAction="withText" />
    <item
        android:id="@+id/clear_all_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_trash"
        android:title="@string/list_overview_drop_down_clear_btn"
        app:showAsAction="withText" />
</menu>