<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_list"
        android:icon="@drawable/ic_share"
        android:title="@string/share_btn_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete_list"
        android:icon="@drawable/ic_trash"
        android:title="@string/delete_list_button_text"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/rename_list"
        android:icon="@drawable/ic_edit"
        android:title="Rename List"
        app:showAsAction="never"/>
    <item
        android:id="@+id/clear_items_list"
        android:icon="@drawable/ic_clear"
        android:title="@string/clear_items_in_list_button_text"
        app:showAsAction="never" />
</menu>