<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cloudsheeptech.shoppinglist.fragments.create.user.StartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recapLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.create.user.StartFragment"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/start_screen_background_description"
            android:src="@drawable/start_background" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/titleWrapperCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:shadowColor="@color/app_black"
            android:shadowDx="2"
            android:shadowDy="1"
            app:cardBackgroundColor="@color/app_gray_700"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/usernameInputWrapperCard"
            app:layout_constraintStart_toStartOf="@+id/usernameInputWrapperCard"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <TextView
                    style="@style/ShoppingListBoldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/app_name" />

                <TextView
                    style="@style/ShoppingListSubtleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:text="@string/app_author_name" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/usernameInputWrapperCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:elevation="1dp"
            android:shadowColor="@color/app_gray_m_500"
            android:shadowDx="2"
            android:shadowDy="1"
            app:cardBackgroundColor="#80FFFFFF"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleWrapperCardView"
            app:layout_constraintVertical_bias="0.35">

            <EditText
                android:id="@+id/usernameInputText"
                style="@style/ShoppingListNormalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@null"
                android:textAlignment="center"
                android:hint="@string/username_input_hint"
                android:maxLength="20"
                android:text="@={viewModel.inputText}" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.pushUsername()}"
            android:text="@string/btn_start_app"
            style="@style/ShoppingListNormalStyle"
            android:textAlignment="center"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/usernameInputWrapperCard"
            app:layout_constraintStart_toStartOf="@+id/usernameInputWrapperCard"
            app:layout_constraintTop_toBottomOf="@+id/usernameInputWrapperCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>