<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.edit.recipe.RecipeEditFragment">

    <data>

        <variable
            name="viewModel"
            type="com.cloudsheeptech.shoppinglist.fragments.edit.recipe.RecipeEditViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wrappingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/imageCarousel"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:imagePlaceholder="@drawable/receipt_stock" />

            <EditText
                android:id="@+id/recipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/imageCarousel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@={viewModel.title}"
                android:hint="@string/edit_title"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recipeTitle"
                app:layout_constraintStart_toStartOf="@id/recipeTitle"
                app:layout_constraintEnd_toEndOf="@id/recipeTitle"
                android:text="@string/recipe_edit_add_item_btn"
                app:icon="@drawable/ic_item"
                app:iconGravity="textStart"
                android:onClick="@{() -> viewModel.addItem()}"
                style="@style/ShoppingListAppButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/itemRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/addItems"
                app:layout_constraintStart_toStartOf="@id/addItems"
                app:layout_constraintEnd_toEndOf="@id/addItems"
                tools:listitem="@layout/receipt_item_edit_text"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addDescriptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/itemRecyclerView"
                app:layout_constraintStart_toStartOf="@id/itemRecyclerView"
                app:layout_constraintEnd_toEndOf="@id/itemRecyclerView"
                android:text="@string/recipe_edit_add_desc_btn"
                app:icon="@drawable/ic_recipe"
                app:iconGravity="textStart"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> viewModel.addDescription()}"
                style="@style/ShoppingListAppButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/descriptionRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/addDescriptions"
                app:layout_constraintStart_toStartOf="@id/addDescriptions"
                app:layout_constraintEnd_toEndOf="@id/addDescriptions"
                tools:listitem="@layout/receipt_description_edit_text"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <!--            <LinearLayout-->
            <!--                android:id="@+id/descriptionWrapper"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="vertical"-->
            <!--                />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/finishEditingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/descriptionRecyclerView"
                app:layout_constraintStart_toStartOf="@id/descriptionRecyclerView"
                app:layout_constraintEnd_toEndOf="@id/descriptionRecyclerView"
                android:text="@string/edit_recipe_finish_btn"
                app:icon="@drawable/ic_check"
                app:iconGravity="textStart"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> viewModel.storeUpdate()}"
                style="@style/ShoppingListAppButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>